--- a/css/_labels.scss
+++ b/css/_labels.scss
@@ -28,7 +28,8 @@
     }
 
     .circular-label.file {
-        background: #FF5630;
+        background: #d42d08;
+        opacity: 1;
     }
 
     .circular-label.local-rec {
