Remove moderator notification, style alert dialog, fix private message text color

--- a/css/_chat.scss
+++ b/css/_chat.scss
@@ -455,6 +455,8 @@
 
         &.privatemessage {
             background-color: $chatPrivateMessageBackgroundColor;
+            color: #FFF;
+
         }
     }
 }
