--- a/css/_videolayout_belouga.scss
+++ b/css/_videolayout_belouga.scss
@@ -13,7 +13,8 @@
     box-sizing: border-box;
     display: inline-flex;
     align-items: center;
-    box-shadow:1px 2px 6px rgba(0, 0, 0, 0.15), -4px -5px 25px rgba(0, 0, 0, 0.05);
+    // box-shadow:1px 2px 6px rgba(0, 0, 0, 0.15), -4px -5px 25px rgba(0, 0, 0, 0.05);
+    box-shadow: 1px 1px 14px -4px rgba(9,30,66,0.55);
     justify-content: center;
     svg, .jitsi-icon svg {
         color: #8a8a8a;
@@ -29,6 +30,29 @@
 }
 .atlaskit-portal {
     @include font-smoothing();
+    div[role="alert"] {
+        background: #15a5d0;
+        width: -moz-fit-content;
+        width: fit-content;
+        box-shadow: 0 -10px 42px -10px rgba(9,30,66,0.75);
+        span, div {
+            color: #FFF;
+            &[aria-label="error"] {
+
+            }
+        }
+        div:nth-child(2) {
+            button {
+                padding: 5px 10px !important;
+                height: auto;
+                font-weight: 600;
+                background: rgba(0, 0, 0, .28);
+                border-radius: 5px;
+                font-size: .8rem;
+            }
+        }
+
+    }
     div[role="dialog"] {
         background: #FFF;
         color: #656565;
@@ -293,7 +317,7 @@
         box-sizing: border-box;
         position: fixed;
         top: 0;
-        padding: 6px 10px; 
+        padding: 6px 10px 0; 
         background: #FFF;
         
  
@@ -1028,9 +1052,9 @@
         #largeVideoContainer {
             bottom: 115px;
             width: calc(100% - 50px);
-            height: calc(100% - 212px);
+            height: calc(100% - 202px);
             position: absolute;
-            top: 85px;
+            top: 90px;
             bottom: 115px;
             left: 0;
             right: 0;
@@ -1466,9 +1490,9 @@
 
 
 
-    @media screen and (max-width: 769px), screen and (max-height: 768px) {
+    @media screen and (max-width: 769px), screen and (max-height: 600px) {
         .header-wrapper {
-            padding: 6px 0;
+            padding: 6px 0 0;
             .header-left {
                 .btn-container .btn-record svg {
                     // height: 30px;
@@ -1527,7 +1551,7 @@
                 background: #ea8f00;
                 display: flex;
                 border-radius: 10px 0 0 10px;
-                height: 150px;
+                height: 110px;
                 transition: .2s;
                 box-shadow: -3px -7px 10px rgba(0, 0, 0, 0.14), -3px 5px 8px rgba(0, 0, 0, 0.21);
                 bottom: 0;
@@ -1609,14 +1633,14 @@
                         box-sizing: border-box;
                         video {
                             z-index: 5;
-                            width: 60px !important;
-                            height: 60px !important;
+                            width: 50px !important;
+                            height: 50px !important;
                             border-radius: 50px;
                             top: 0;
                             position: relative;
-                            max-width: 60px;
-                            box-shadow: 0 0 20px rgba(0, 0, 0, .26);
-                            margin-left: 10px;
+                            max-width: 50px;
+                            box-shadow: 0 1px 12px rgba(0, 0, 0, .36);
+                            margin-left: 7px;
                         }
                         .videocontainer__toolbar {
                             display: none;
@@ -1670,14 +1694,14 @@
 
             }
             #filmstripLocalVideo {
-                width: 150px;
+                width: 170px;
                 bottom: 130px;
                 right: initial;
                 left: 40px;
                 position: fixed;
                 
                 #filmstripLocalVideoThumbnail .videocontainer {
-                    height: 120px;
+                    height: 110px;
                 }
             }
 
@@ -1707,7 +1731,7 @@
     }
 
     @media  screen and (orientation:landscape) and (max-device-width: 769px), 
-            screen and (max-height: 768px) {
+            screen and (max-height: 600px) {
             #sideToolbarContainer:not(.invisible) {
                 bottom: 10px;
                 z-index: 400;
@@ -1741,7 +1765,7 @@
 
                 .header-wrapper {
                     width: 100%;
-                    padding: 6px 0;
+                    padding: 6px 0 0;
                     top: -200px;
                     .subject {
                         @media screen and (max-width: 300px) {
@@ -1841,9 +1865,9 @@
                     }
 
                     #filmstripLocalVideo {
-                        bottom: 90px;
+                        bottom: 60px;
                         left: 10px;
-                        width: 150px;
+
                         #filmstripLocalVideoThumbnail .videocontainer {
                             height: 110px;
                         }
@@ -1851,7 +1875,7 @@
                     #filmstripRemoteVideos {
                         height: calc(100% - 10px);
                         #filmstripRemoteVideosContainer .videocontainer {
-                            height: 50px;
+                            height: 60px;
                             .remotevideomenu {
                                 left: initial;
                                 direction: ltr;
@@ -1864,6 +1888,7 @@
                                     border-radius: 50px;
                                 }
                             }
+
                             &.display-avatar-with-name, &.display-avatar-only {
                                 .avatar-container {
                                     width: 40px !important;
@@ -1963,5 +1988,19 @@
             left: 0;
         }
     }
+    @media screen and (max-width: 575px) and (max-height: 600px) {
+        &.vertical-filmstrip{
+
+            #largeVideoContainer {
+                top: 0;
+                height: 100%;
+            }
+            .filmstrip #filmstripRemoteVideos {
+                margin-top: 20px;
+                height: calc(100% - 40px);
+            }
+        }
+    }
+
 
 }
