--- a/css/_inlay.scss
+++ b/css/_inlay.scss
@@ -20,6 +20,7 @@
         display: block;
         margin-top: 22px;
         font-size: 16px;
+        margin-bottom: 20px;
     }
 
     &__icon {
