Small styling, config updates

--- a/css/filmstrip/_horizontal_filmstrip.scss
+++ b/css/filmstrip/_horizontal_filmstrip.scss
@@ -82,7 +82,7 @@
     }
 
     .remote-videos-container {
-        transition: opacity 1s;
+        transition: opacity .5s;
     }
 
     &.hide-videos {
