--- a/css/filmstrip/_vertical_filmstrip.scss
+++ b/css/filmstrip/_vertical_filmstrip.scss
@@ -134,7 +134,7 @@
 
     .remote-videos-container {
         display: flex;
-        transition: opacity 1s;
+        transition: opacity .5s;
     }
 
     .hide-scrollbar#filmstripRemoteVideos {
